Fix contrast issues with color overrides

--- a/content/_static/overrides.css
+++ b/content/_static/overrides.css
@@ -26,7 +26,7 @@
     background: #DDDDDD;
 }
 .rst-content .instructor-note > .admonition-title {
-    background: #BBBBBB;
+    background: #595959;
 }
 .rst-content .instructor-note > .admonition-title::before {
     content: "";
@@ -37,7 +37,7 @@
     background: #EEEEBB;
 }
 .rst-content .callout > .admonition-title {
-    background: #BBCC33;
+    background: #595959;
 }
 
 /* questions */
@@ -45,15 +45,15 @@
     background: rgba(253, 219, 199, 0.3);
 }
 .rst-content .questions > .admonition-title {
-    background: rgba(204, 51, 17, 0.5);
+    background: #A7280C;
 }
 
 /* discussion */
 .rst-content .discussion {
-    background: rgba(231, 212, 232 0.3);
+    background: rgba(231, 212, 232, 0.3);
 }
 .rst-content .discussion > .admonition-title {
-    background: rgba(194, 165, 207, 0.5);
+    background: #714884;
 }
 
 /* signature */
